lots of improvements. added delegate interface for callbacks! working example with mouse tracking.

--- a/canvas/Makefile
+++ b/canvas/Makefile
@@ -1,8 +1,7 @@
 include $(GOROOT)/src/Make.$(GOARCH)
 
-TARG=gocairo
-CGOFILES=\
-	gocairo.go
+TARG=goosurface
+CGOFILES=goosurface.go
 CGO_CFLAGS=`pkg-config gtk+-2.0 --cflags`
 CGO_LDFLAGS=`pkg-config gtk+-2.0 cairo gthread-2.0 --libs`
 
